--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,5 +1,14 @@
 <div ng-cloak>
     <div class="row">
+        <div class="col-md-2 col-lg-2">
+            <div style="height:50%; height:50%"><a ui-sref="mensaje" class="glyphicon glyphicon-inbox" style="font-size:500%; text-decoration:none; margin-bottom:50%"></a></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 col-lg-2">
+            <a ui-sref="post" class="glyphicon glyphicon-list-alt" style="font-size:500%; text-decoration:none; margin-bottom:50%"></a>
+        </div>
+    </div>
         <!--<div class="col-md-4">
             <span class="hipster img-responsive img-rounded"></span>
         </div>
@@ -37,6 +46,5 @@
                 <span translate="main.like">If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank" translate="main.github">Github</a>!
             </p>
         </div>-->
-    </div>
 </div>
 
